added mode selection

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
                 <div class="radiobuttons">
                     <ul>
                         <li>
-                            <input type="radio" name="mode" id="typing" value="typing" checked="checked">
+                            <input type="radio" name="mode" id="type" value="type">
                             <span class="o">[ ]</span>
                             <span class="x">[x]</span>
-                            <label for="typing">Typing Test</label>
+                            <label for="type">Typing Test</label>
                         </li>
                         <li>
                             <input type="radio" name="mode" id="keyboard" value="keyboard">
@@ -38,7 +38,7 @@
         </div>
         
         <!-- TYPING TEXT -->
-        <div class="text-container">
+        <div class="type-container">
             <div class="text-area" id="textArea">
                 <!-- here is the text -->
             </div>
@@ -88,6 +88,10 @@
             <div class="keys-lane key spacekey" id="Space">
                 SPACE
             </div>
+        </div>
+
+        <div class="fake-container">
+
         </div>
         <!-- <div class="settings-container">
             <div class="mode zen">
