added esc on mode

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,13 @@
                             <span class="o">[ ]</span>
                             <span class="x">[x]</span>
                             <label for="fake">Fake Typing</label>
-                        </li>
+                        </li>                       
+                        <li>
+                            <input type="radio" name="mode" id="fake" value="fake">
+                            <span class="o">[ ]</span>
+                            <span class="x">[x]</span>
+                            <label for="fake">Fake Typing</label>
+                        </li>                       
                     </ul>
                 </div>
             </div>
