added pause functionality

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,18 @@
     <title>Symply Type</title>
 </head>
 <body>
+    <div class="pause-container">
+        <div class="pause-text">
+            <ul>
+                <li>
+                    [ ] Back to Menu
+                </li>
+                <li>
+                    [ ] Close
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="main-container">
         <div class="menu-container">
             <!-- <div>Press a number</div> -->
@@ -52,6 +64,9 @@
 
         <!-- TYPING TEXT -->
         <div class="type-container">
+            <div class="wpm-area" id="wpm">
+                <!-- wpm here -->
+            </div>
             <div class="text-area" id="textArea">
                 <!-- here is the text -->
             </div>
