initialize node express

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     <div class="pause-container">
         <div class="pause-text">
             <ul>
-                <li>
-                    [ ] Back to Menu
+                <li class="no-click">
+                    [x] Back to Menu
                 </li>
-                <li>
+                <!-- <li class="no-click">
                     [ ] Close
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
@@ -23,7 +23,7 @@
         <div class="menu-container">
             <!-- <div>Press a number</div> -->
             <div class="list-wrapper">
-                <div class="title">TITLE</div>
+                <div class="title">SYMPLYTYPE</div>
                 <div class="radiobuttons">
                     <ul>
                         <li class="no-click">
