--- a/public/index.html
+++ b/public/index.html
@@ -125,6 +125,6 @@
 </div>
 
 <script src="https://kit.fontawesome.com/f77fb5b473.js" crossorigin="anonymous"></script>
-<script src="../src/script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
